Started Item Group

--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.firstmod.ball_of_yarn": "Ball of Yarn"
+  "item.firstmod.ball_of_yarn": "Ball of Yarn",
+  "item.firstmod.laser_pointer": "Laser Pointer"
 }
