Added Laser and Bricks

--- a/src/main/resources/assets/firstmod/lang/en_us.json
+++ b/src/main/resources/assets/firstmod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.firstmod.ball_of_yarn": "Ball of Yarn",
-  "item.firstmod.laser_pointer": "Laser Pointer"
+  "item.firstmod.laser_pointer": "Laser Pointer",
+  "block.firstmod.irregular_bricks": "Irregular Bricks"
 }
